akynoc/tests/snapshots/integration__collections@parser.snap
---
source: akynoc/tests/integration.rs
expression: ast
snapshot_kind: text
---
[
  Item(
    id: "[nodeid]",
    kind: StructDecl(StructDecl(
      name: Ident(
        name: "list",
      ),
      fields: [
        Field(
          name: Ident(
            name: "e",
          ),
          ty: Ty(
            id: "[nodeid]",
            kind: Pointer(Ty(
              id: "[nodeid]",
              kind: Void,
            )),
          ),
        ),
        Field(
          name: Ident(
            name: "next",
          ),
          ty: Ty(
            id: "[nodeid]",
            kind: Pointer(Ty(
              id: "[nodeid]",
              kind: Struct(Ident(
                name: "list",
              )),
            )),
          ),
        ),
      ],
    )),
  ),
  Item(
    id: "[nodeid]",
    kind: FnDefn(FnDefn(
      sig: FnSig(
        name: Ident(
          name: "memcpy",
        ),
        params: [
          Param(
            name: Ident(
              name: "source",
            ),
            ty: Ty(
              id: "[nodeid]",
              kind: Pointer(Ty(
                id: "[nodeid]",
                kind: Void,
              )),
            ),
          ),
          Param(
            name: Ident(
              name: "destination",
            ),
            ty: Ty(
              id: "[nodeid]",
              kind: Pointer(Ty(
                id: "[nodeid]",
                kind: Void,
              )),
            ),
          ),
          Param(
            name: Ident(
              name: "bytes",
            ),
            ty: Ty(
              id: "[nodeid]",
              kind: Primitive(Int),
            ),
          ),
        ],
        ty: Ty(
          id: "[nodeid]",
          kind: Void,
        ),
      ),
      decl: None,
      block: Stmt(
        id: "[nodeid]",
        kind: Block(Block(
          stmts: [
            Stmt(
              id: "[nodeid]",
              kind: Local(Local(
                name: Ident(
                  name: "src",
                ),
                ty: Ty(
                  id: "[nodeid]",
                  kind: Infer,
                ),
                value: Some(Expr(
                  id: "[nodeid]",
                  kind: Typecast(Ty(
                    id: "[nodeid]",
                    kind: Pointer(Ty(
                      id: "[nodeid]",
                      kind: Primitive(Char),
                    )),
                  ), Expr(
                    id: "[nodeid]",
                    kind: Ident(Ident(
                      name: "source",
                    )),
                  )),
                )),
              )),
            ),
            Stmt(
              id: "[nodeid]",
              kind: Local(Local(
                name: Ident(
                  name: "dst",
                ),
                ty: Ty(
                  id: "[nodeid]",
                  kind: Infer,
                ),
                value: Some(Expr(
                  id: "[nodeid]",
                  kind: Typecast(Ty(
                    id: "[nodeid]",
                    kind: Pointer(Ty(
                      id: "[nodeid]",
                      kind: Primitive(Char),
                    )),
                  ), Expr(
                    id: "[nodeid]",
                    kind: Ident(Ident(
                      name: "destination",
                    )),
                  )),
                )),
              )),
            ),
            Stmt(
              id: "[nodeid]",
              kind: For(Pattern(
                id: "[nodeid]",
                kind: RangePattern(Ident(
                  name: "i",
                ), InclusiveExclusive(Expr(
                  id: "[nodeid]",
                  kind: Literal(Literal(
                    value: Int(0),
                  )),
                ), Expr(
                  id: "[nodeid]",
                  kind: Ident(Ident(
                    name: "bytes",
                  )),
                ))),
              ), Stmt(
                id: "[nodeid]",
                kind: Block(Block(
                  stmts: [
                    Stmt(
                      id: "[nodeid]",
                      kind: Expr(Expr(
                        id: "[nodeid]",
                        kind: Assign(Expr(
                          id: "[nodeid]",
                          kind: Index(Expr(
                            id: "[nodeid]",
                            kind: Ident(Ident(
                              name: "dst",
                            )),
                          ), Expr(
                            id: "[nodeid]",
                            kind: Ident(Ident(
                              name: "i",
                            )),
                          )),
                        ), Expr(
                          id: "[nodeid]",
                          kind: Index(Expr(
                            id: "[nodeid]",
                            kind: Ident(Ident(
                              name: "src",
                            )),
                          ), Expr(
                            id: "[nodeid]",
                            kind: Ident(Ident(
                              name: "i",
                            )),
                          )),
                        )),
                      )),
                    ),
                  ],
                )),
              )),
            ),
          ],
        )),
      ),
    )),
  ),
  Item(
    id: "[nodeid]",
    kind: FnDefn(FnDefn(
      sig: FnSig(
        name: Ident(
          name: "main",
        ),
        params: [],
        ty: Ty(
          id: "[nodeid]",
          kind: Void,
        ),
      ),
      decl: None,
      block: Stmt(
        id: "[nodeid]",
        kind: Block(Block(
          stmts: [],
        )),
      ),
    )),
  ),
]
